# Monte-Carlo-cuda

./: .gitignore  CMakeLists.txt  README.md  build.md  main.py  quasi.md
src/benchmark/: main.cpp
src/core/: black_scholes.cpp  black_scholes.hpp  brownian_bridge.cpp  brownian_bridge.hpp  halton.cpp  halton.hpp  math_utils.hpp  moro_inv_cnd.cpp  moro_inv_cnd.hpp  quasi_rng.cpp  quasi_rng.hpp  scramble.cpp  scramble.hpp  sobol.cpp  sobol.hpp  sobol_joe_kuo.hpp
src/cpu/: american_option_serial.cpp
src/cuda/: american_option.cu  american_option_qmc.cu  kernels.cuh  moro_device.cuh  reduction.cuh  sobol_gpu.cu  sobol_gpu.cuh
src/openmp/: american_option_omp.cpp  american_option_qmc_omp.cpp
tests/: validate.cpp
